# Cortex5

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_pipeline.py
Architecture/: Architecture.md  Vibe_Coding_Plan.md  plan.md
Architecture/Daywise-Task-Breakdown/: Day1_Agile_Plan.md  Day1_Learnings.md  Day2_Agile_Plan.md  Day2_Learnings.md  Day3_Agile_Plan.md  Day3_Learnings.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/components/: AgentStatus.tsx  EquityCurve.tsx  MetricsDashboard.tsx  PriceChart.tsx  TickerSelector.tsx  TimeframeSelector.tsx  TradeLog.tsx
frontend/src/hooks/: useAgentStream.ts
k8s/: kind-config.yaml
scripts/: ingest_news.py  init_db.py  setup_cluster.sh
src/: graph.py  state.py
src/agents/: base_agent.py  data_agent.py  execution_agent.py  quant_agent.py  risk_agent.py  sentiment_agent.py
src/api/: main.py
src/backtesting/: engine.py  metrics.py  portfolio.py  position_sizing.py  strategy_adapter.py
src/data/: db_client.py  db_schema.sql  embeddings.py  market_fetcher.py  news_fetcher.py  qdrant_client.py  stock_universe.py  validators.py  vector_schema.py
src/utils/: indicators.py  risk_manager.py
tests/: test_backtest_simple.py  test_integration.py  test_performance.py
